# push_swap

./: Makefile
include/: deque.h  deque_order.h  input.h  operations.h  problem.h  push_swap.h
src/: operations.c  push_swap.c
src/deque/: cmp.c  constructor.c  destructor.c  first_last.c  get.c  pop.c  properties.c  push.c  ranked.c  rotate.c  sort_unstable.c  unique.c
src/input/: parse_many_numbers.c  parse_number.c  split_in_place.c  string_length.c
src/operations/: apply.c  opcode.c  swap.c
src/problem/: apply.c  opcode.c
src/problem/sort/: small_array.c  sort.c  subsequence_len.c
src/sort/: sort.c
test/: CMakeLists.txt
test/src/: deque.cpp  operations.cpp  parse_number.cpp  problem.cpp
